[gd_scene load_steps=45 format=2]

[ext_resource path="res://Resources/enemy/Skeleton_Idle_0.png" type="Texture" id=1]
[ext_resource path="res://ScriptFolder/Enemy/KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://Resources/enemy/Skeleton_Idle_1.png" type="Texture" id=3]
[ext_resource path="res://Resources/enemy/Skeleton_Idle_2.png" type="Texture" id=4]
[ext_resource path="res://Resources/enemy/Skeleton_Idle_10.png" type="Texture" id=5]
[ext_resource path="res://Resources/enemy/Skeleton_Idle_8.png" type="Texture" id=6]
[ext_resource path="res://Resources/enemy/Skeleton_Idle_5.png" type="Texture" id=7]
[ext_resource path="res://Resources/enemy/Skeleton_Idle_7.png" type="Texture" id=8]
[ext_resource path="res://Resources/enemy/Skeleton_Idle_9.png" type="Texture" id=9]
[ext_resource path="res://Resources/enemy/Skeleton_Idle_3.png" type="Texture" id=10]
[ext_resource path="res://Resources/enemy/Skeleton_Idle_6.png" type="Texture" id=11]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_11.png" type="Texture" id=12]
[ext_resource path="res://Resources/enemy/Skeleton_Hit_3.png" type="Texture" id=14]
[ext_resource path="res://Resources/enemy/Skeleton_Hit_6.png" type="Texture" id=15]
[ext_resource path="res://Resources/shadow.png" type="Texture" id=16]
[ext_resource path="res://Resources/enemy/Skeleton_Hit_2.png" type="Texture" id=17]
[ext_resource path="res://Resources/enemy/Skeleton_Hit_4.png" type="Texture" id=18]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_14.png" type="Texture" id=19]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_10.png" type="Texture" id=20]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_13.png" type="Texture" id=21]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_12.png" type="Texture" id=22]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_7.png" type="Texture" id=23]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_5.png" type="Texture" id=24]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_2.png" type="Texture" id=25]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_0.png" type="Texture" id=26]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_6.png" type="Texture" id=27]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_1.png" type="Texture" id=28]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_4.png" type="Texture" id=29]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_3.png" type="Texture" id=30]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_8.png" type="Texture" id=31]
[ext_resource path="res://Resources/enemy/Skeleton_Dead_9.png" type="Texture" id=32]
[ext_resource path="res://Resources/hurt.mp3" type="AudioStream" id=33]
[ext_resource path="res://Resources/enemy/Skeleton_Hit_5.png" type="Texture" id=34]
[ext_resource path="res://Resources/enemy/Skeleton_Hit_7.png" type="Texture" id=35]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 12.5 )

[sub_resource type="Animation" id=6]
resource_name = "Dead"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 26 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 19 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 1.4 ),
"transitions": PoolRealArray( 1.03526, 1.07177 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.254902 ), Color( 1, 1, 1, 0.254902 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Hurt"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 34 ), ExtResource( 15 ), ExtResource( 35 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HurtAudio:stream")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 33 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 12 )

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )
width = 10

[sub_resource type="Gradient" id=12]
interpolation_mode = 1
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 0.0865324, 0.574219, 0.0314026, 1 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )
width = 10

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 2 )

[node name="bodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 6 )
anims/Hurt = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 26 )

[node name="hurtBox" type="Area2D" parent="Sprite"]
collision_layer = 2

[node name="hurtCollision" type="CollisionShape2D" parent="Sprite/hurtBox"]
position = Vector2( -3, 4 )
shape = SubResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -1.25, 16 )
scale = Vector2( 0.473214, 0.16 )
z_index = -100
texture = ExtResource( 16 )

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 33 )

[node name="HeathBar_bg" type="Sprite" parent="."]
position = Vector2( -10, 19 )
scale = Vector2( 1.8, 1.8 )
texture = SubResource( 11 )
offset = Vector2( 5, 0 )

[node name="HeathBar" type="Sprite" parent="."]
position = Vector2( -9, 19 )
scale = Vector2( 1.6, 1.2 )
texture = SubResource( 13 )
offset = Vector2( 5, 0 )
